privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-app
  namespace: baseline-test
spec:
  containers:
  - name: app
    image: nginx:1.21
    ports:
    - containerPort: 80
    securityContext:
      privileged: true
      runAsUser: 0
